# photo-studio-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml
auth/: auth.py  dependencies.py
configs/: db.py  settings.py  tracing.py
docs/: AI_PHOTO_GENERATION.md  CI_CD.md  CI_CD_CHECKLIST.md  CI_CD_QUICK_START.md  CI_CD_SETUP_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  TRACING.md  TRACING_DEPLOYMENT_CHECKLIST.md  TRACING_QUICK_REFERENCE.md  TRACING_SETUP_SUMMARY.md
functions/thumbnail_generator/: .gcloudignore  Dockerfile  README.md  deploy.sh  main.py  requirements.txt  test_local.py
migrations/: env.py
models/: mixins.py  photo.py  user.py
repositories/: album.py  photo.py  user.py
routers/: ai_photos.py  albums.py  auth.py  healthy.py  photos.py  users.py
scripts/: manage_secrets.py
services/: ai_image_generator.py  album.py  firestore.py  photo.py  secret_manager.py  storage.py  user.py
terraform/: README.md
tests/: README.md
tests/integration/: conftest.py  test_healthy.py
tests/unit/: conftest.py
