[tool.poetry]
name = "photo-studio-app"
version = "0.1.0"
description = "Photo management application with AI-powered image generation"
authors = ["mjthecoder65 <michael53161@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = ">=1.17.2,<2.0.0"
uvicorn = ">=0.38.0,<0.39.0"
fastapi = {extras = ["standard"], version = ">=0.124.4,<0.125.0"}
asyncpg = ">=0.31.0,<0.32.0"
sqlalchemy = ">=2.0.45,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-dotenv = ">=1.2.1,<2.0.0"
python-jose = ">=3.5.0,<4.0.0"
google-cloud-storage = "2.14.0"
google-cloud-firestore = ">=2.21.0,<3.0.0"
google-generativeai = "0.8.3"
pillow = ">=12.0.0,<13.0.0"
google-cloud-secret-manager = ">=2.25.0,<3.0.0"
opentelemetry-api = ">=1.39.1,<2.0.0"
opentelemetry-sdk = ">=1.39.1,<2.0.0"
opentelemetry-instrumentation-fastapi = ">=0.60b1,<0.61"
opentelemetry-instrumentation-sqlalchemy = ">=0.60b1,<0.61"
opentelemetry-instrumentation-httpx = ">=0.60b1,<0.61"
opentelemetry-exporter-gcp-trace = ">=1.11.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.24.0,<0.25.0"
pytest-cov = ">=6.0.0,<7.0.0"
httpx = ">=0.28.1,<0.29.0"
ruff = ">=0.9.1,<0.10.0"
bandit = ">=1.8.0,<2.0.0"
pre-commit = ">=4.0.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["B011"]  # assert False

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv"]
skips = ["B101"]  # Skip assert_used test